--- a/.github/workflows/pipeline.publish.yaml
+++ b/.github/workflows/pipeline.publish.yaml
@@ -10,6 +10,10 @@ on:
     branches:
       - main
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   eksctl:
     runs-on: ubuntu-latest
