test publish for aws
Signed-off-by: Tom Runyon <tom@defenseunicorns.com>

--- a/.github/workflows/pipeline.publish.yaml
+++ b/.github/workflows/pipeline.publish.yaml
@@ -6,6 +6,9 @@ on:
   push:
     tags:
       - "v*"
+  pull_request:
+    branches:
+      - main     
 
 permissions:
   contents: read
@@ -50,17 +53,17 @@ jobs:
         working-directory: defense-unicorns-distro
         timeout-minutes: 60
       
-      - name: Publish DUBBD
-        run: zarf package publish zarf-package-big-bang-amd64-*.tar.zst oci://ghcr.io/defenseunicorns/packages
-        working-directory: defense-unicorns-distro
-        timeout-minutes: 60
+      # - name: Publish DUBBD
+      #   run: zarf package publish zarf-package-big-bang-amd64-*.tar.zst oci://ghcr.io/defenseunicorns/packages
+      #   working-directory: defense-unicorns-distro
+      #   timeout-minutes: 60
 
-      - name: Create DUBBD
+      - name: Create DUBBD-AWS
         run: zarf package create --confirm
         working-directory: aws
         timeout-minutes: 60
       
-      - name: Publish DUBBD
+      - name: Publish DUBBD-AWS
         run: zarf package publish zarf-package-big-bang-aws-*.tar.zst oci://ghcr.io/defenseunicorns/packages
         working-directory: aws
         timeout-minutes: 60
