--- a/.github/workflows/pipeline.aws.yaml
+++ b/.github/workflows/pipeline.aws.yaml
@@ -44,7 +44,7 @@ jobs:
         working-directory: .github/workflows/eks
 
       - name: Create EKS cluster
-        run: zarf package deploy zarf-package-distro-eks-multi.tar.zst --confirm --set cluster_name=aws-${GITHUB_SHA:0:7}
+        run: zarf package deploy zarf-package-distro-eks-multi.tar.zst --confirm --set cluster_name=aws-${GITHUB_SHA:0:7} --set loki_kms_key_alias=loki-${GITHUB_SHA:0:7} 
         working-directory: .github/workflows/eks
         id: create-cluster
         # Capture the output of the command as an environment variable
