--- a/values/authservice.yaml
+++ b/values/authservice.yaml
@@ -3,10 +3,10 @@ addons:
     enabled: true
     values:
       chains:
-        authdemo:
+        "###ZARF_VAR_KEYCLOAK_APP_NAME###":
           match:
             header: ":authority"
             prefix: "###ZARF_VAR_KEYCLOAK_APP_NAME###"
-          callback_uri: https://###ZARF_VAR_KEYCLOAK_APP_NAME###.###ZARF_VAR_DOMAIN###/login/generic_oauth
+          callback_uri: "https://###ZARF_VAR_KEYCLOAK_APP_NAME###.###ZARF_VAR_DOMAIN###/login/generic_oauth"
           client_id: "###ZARF_VAR_KEYCLOAK_APP_ID###"
           client_secret: "###ZARF_VAR_KEYCLOAK_APP_SECRET###"
