feat: update GH workflows for renovate automation

--- a/.github/workflows/pipeline.aws.yaml
+++ b/.github/workflows/pipeline.aws.yaml
@@ -29,6 +29,7 @@ jobs:
       - name: Install Zarf
         uses: defenseunicorns/setup-zarf@main
         with:
+          # renovate: datasource=github-tags depName=defenseunicorns/zarf versioning=semver
           version: v0.25.0
           download-init-package: true
 
