--- a/.github/workflows/pipeline.aws.yaml
+++ b/.github/workflows/pipeline.aws.yaml
@@ -39,36 +39,34 @@ jobs:
           username: ${{ secrets.REGISTRY1_USERNAME }}
           password: ${{ secrets.REGISTRY1_PASSWORD }}
     
-      - name: Package EKSCTL 
-        run: zarf package create --confirm
-        working-directory: .github/workflows/eks
-
-      - name: Create EKS cluster
-        run: zarf package deploy zarf-package-distro-eks-multi.tar.zst --confirm --set cluster_name=aws-${GITHUB_SHA:0:7} --set loki_kms_key_alias=loki-${GITHUB_SHA:0:7} 
-        working-directory: .github/workflows/eks
+      - name: Create EKS cluster and Zarf Init
+        run: zarf package deploy oci://ghcr.io/defenseunicorns/eks:v1.23.5 --confirm --set cluster_name=aws-${GITHUB_SHA:0:7}
+        working-directory: .github/workflows/eks #just holds the zarf-config
         id: create-cluster
         # Capture the output of the command as an environment variable
         env:
           OIDC: |
             $(aws eks describe-cluster --name aws-${GITHUB_SHA:0:7} --query "cluster.identity.oidc" --output text | cut -d '/' -f 5)
-
+      - name: Create KMS Key to be replaced by UDS IaC module later
+        working-directory: .github/workflows/kms
+        run: 
         # eventually have zarf deploy   \
+          tf init
+          terraform apply -y --set kms_key_alias=${GITHUB_SHA:0:7}
+        env:
+          KMS: |
+            $(terraform output -raws kms_key_arn )
       - name: Show Cluster
         run: |
           kubectl get nodes
 
-      - name: Zarf init
-        run: |
-          zarf init -a amd64 --components=git-server --confirm
-
-      - name: Create DUBBD
+      - name: Create DUBBD-AWS
         run: zarf package create --confirm
         working-directory: aws
         timeout-minutes: 60
 
-      
       - name: Deploy DUBBD-AWS
-        run: zarf package deploy zarf-package-*.tar.zst --confirm --set name=big-bang-${GITHUB_SHA:0:7} --set loki_kms_key_alias=${GITHUB_SHA:0:7} --set eks_oidc_provider_arn=arn:aws:iam::248783118822:oidc-provider/oidc.eks.us-west-2.amazonaws.com/id/${{ env.OIDC }}
+        run: zarf package deploy zarf-package-*.tar.zst --confirm --set loki_kms_key_arn={{ env.KMS }} --set name=big-bang-${GITHUB_SHA:0:7} --set eks_oidc_provider_arn=arn:aws:iam::248783118822:oidc-provider/oidc.eks.us-west-2.amazonaws.com/id/${{ env.OIDC }}
         working-directory: aws
         timeout-minutes: 60
 
@@ -81,6 +79,13 @@ jobs:
         if: always()
         # can't do a zarf package remove since there's no kubernetes cluster.
         run: |
-          ./eksctl delete cluster -f config.yaml --disable-nodegroup-eviction --wait
+          zarf package destroy oci://ghcr.io/defenseunicorns/eks:v1.23.5 --confirm
         working-directory: .github/workflows/eks
+
+
+      - name: Remove KMS Key to be replaced by UDS IaC module later
+        working-directory: .github/workflows/kms
+        run: 
+        # eventually have zarf deploy   \
+          terraform destroy -y
 
