--- a/aws/zarf.yaml
+++ b/aws/zarf.yaml
@@ -66,8 +66,12 @@ components:
             dir: loki
     files:
     # terraform code
-    - source: loki
-      target: run/loki
+    - source: loki/.terraform
+      target: run/loki/.terraform
+    - source: loki/main.tf
+      target: run/loki/main.tf
+    - source: loki/terraform.tfvars
+      target: run/loki/terraform.tfvars
   - name: execute-terraform
     required: true
     actions:
