put the zarf init back in the pipeline
Signed-off-by: Tom Runyon <tom@defenseunicorns.com>

--- a/.github/workflows/pipeline.aws.yaml
+++ b/.github/workflows/pipeline.aws.yaml
@@ -60,6 +60,10 @@ jobs:
         run: |
           kubectl get nodes
 
+      - name: Zarf init
+        run: |
+          zarf init -a amd64 --components=git-server --confirm
+
       - name: Create DUBBD-AWS
         run: zarf package create --confirm
         working-directory: aws
