-auto-approve kms key deletion
Signed-off-by: Tom Runyon <tom@defenseunicorns.com>

--- a/.github/workflows/pipeline.aws.yaml
+++ b/.github/workflows/pipeline.aws.yaml
@@ -95,5 +95,5 @@ jobs:
         working-directory: .github/workflows/kms
         run: 
         # eventually have zarf deploy   \
-          terraform destroy -y
+          terraform destroy -auto-approve
 
