--- a/.github/workflows/pipeline.aws.yaml
+++ b/.github/workflows/pipeline.aws.yaml
@@ -22,10 +22,6 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-west-2
 
-      - name: Show AWS User
-        run: |
-
-
       - name: Install Zarf
         uses: defenseunicorns/setup-zarf@main
         with:
@@ -39,18 +35,19 @@ jobs:
           username: ${{ secrets.REGISTRY1_USERNAME }}
           password: ${{ secrets.REGISTRY1_PASSWORD }}
           
-      - name: Package EKSCTL 
-        run: zarf package create --confirm
-        working-directory: .github/workflows/eks
+      # - name: Package EKSCTL 
+      #   run: zarf package create --confirm
+      #   working-directory: .github/workflows/eks
 
-      - name: Create EKS cluster and Zarf Init
-        run: zarf package deploy zarf-package-distro-eks-multi.tar.zst --confirm --set cluster_name=aws-${GITHUB_SHA:0:7}
-        working-directory: .github/workflows/eks #just holds the zarf-config
-        id: create-cluster
-        # Capture the output of the command as an environment variable
-        env:
-          OIDC: |
-            $(aws eks describe-cluster --name aws-${GITHUB_SHA:0:7} --query "cluster.identity.oidc" --output text | cut -d '/' -f 5)
+      # - name: Create EKS cluster and Zarf Init
+      #   run: zarf package deploy zarf-package-distro-eks-multi.tar.zst --confirm --set cluster_name=aws-${GITHUB_SHA:0:7}
+      #   working-directory: .github/workflows/eks #just holds the zarf-config
+      #   id: create-cluster
+      #   # Capture the output of the command as an environment variable
+      #   env:
+      #     OIDC: |
+      #       $(aws eks describe-cluster --name aws-${GITHUB_SHA:0:7} --query "cluster.identity.oidc" --output text | cut -d '/' -f 5)
+
       - name: Create KMS Key to be replaced by UDS IaC module later
         working-directory: .github/workflows/kms
         run: |
@@ -59,35 +56,41 @@ jobs:
         env:
           KMS: |
             $(terraform output -raw kms_key_arn )
-      - name: Show Cluster
+      
+
+      - name: debug
         run: |
-          kubectl get nodes
+          echo "${{ env.KMS }} ${{ env.OIDC }}"
+      # - name: Show Cluster
+      #   run: |
+      #     kubectl get nodes
 
-      - name: Zarf init
-        run: |
-          zarf init -a amd64 --components=git-server --confirm
+      # - name: Zarf init
+      #   run: |
+      #     zarf init -a amd64 --components=git-server --confirm
 
-      - name: Create DUBBD-AWS
-        run: zarf package create --confirm
-        working-directory: aws
-        timeout-minutes: 60
+      # - name: Create DUBBD-AWS
+      #   run: zarf package create --confirm
+      #   working-directory: aws
+      #   timeout-minutes: 60
 
-      - name: Deploy DUBBD-AWS
-        run: zarf package deploy zarf-package-*.tar.zst --confirm --set loki_kms_key_arn=${{ env.KMS }} --set name=big-bang-${GITHUB_SHA:0:7} --set eks_oidc_provider_arn=arn:aws:iam::248783118822:oidc-provider/oidc.eks.us-west-2.amazonaws.com/id/${{ env.OIDC }}
-        working-directory: aws
-        timeout-minutes: 60
 
-      - name: Remove DUBBD-AWS
-        run: zarf package remove zarf-package-*.tar.zst --confirm
-        working-directory: aws
-        timeout-minutes: 60
+      # - name: Deploy DUBBD-AWS
+      #   run: zarf package deploy zarf-package-*.tar.zst --confirm --set loki_kms_key_arn=${{ env.KMS }} --set name=big-bang-${GITHUB_SHA:0:7} --set eks_oidc_provider_arn=arn:aws:iam::248783118822:oidc-provider/oidc.eks.us-west-2.amazonaws.com/id/${{ env.OIDC }}
+      #   working-directory: aws
+      #   timeout-minutes: 60
 
-      - name: Teardown EKS cluster
-        if: always()
-        # can't do a zarf package remove since there's no kubernetes cluster.
-        run: |
-          ./eksctl delete cluster -f config.yaml --disable-nodegroup-eviction --wait
-        working-directory: .github/workflows/eks
+      # - name: Remove DUBBD-AWS
+      #   run: zarf package remove zarf-package-*.tar.zst --confirm
+      #   working-directory: aws
+      #   timeout-minutes: 60
+
+      # - name: Teardown EKS cluster
+      #   if: always()
+      #   # can't do a zarf package remove since there's no kubernetes cluster.
+      #   run: |
+      #     ./eksctl delete cluster -f config.yaml --disable-nodegroup-eviction --wait
+      #   working-directory: .github/workflows/eks
 
 
       - name: Remove KMS Key to be replaced by UDS IaC module later
