try changing directory
Signed-off-by: Tom Runyon <tom@defenseunicorns.com>

--- a/.github/workflows/pipeline.aws.yaml
+++ b/.github/workflows/pipeline.aws.yaml
@@ -57,7 +57,7 @@ jobs:
           terraform output
         env:
           KMS: |
-            $(terraform output -raw kms_key_arn )
+            $(cd .github/workflows/kms && terraform output -raw kms_key_arn )
       
 
       - name: debug
